--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "bringwhat",
-  "version": "0.1.0",
+  "version": "1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "next lint",
     "postinstall": "npx prisma generate"
   },
